<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TestApp</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary_quantity">Quantity:<xliff:g id="quantit" example="2">%d</xliff:g></string>
    <string name="order_summary_username">Name <xliff:g id="name" example="amy">%s%%</xliff:g></string>
    <string name="toppings">Toppings</string>
 <string name="namefield">Name:</string>
    <string name="whippedcream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_summary_price">Total:</string>
    <string name="thank">Thank You!</string>
</resources>
